# qe_to_ff

./: README.md  pyproject.toml  submit_qe_configs.py
ff_trainer/: __init__.py  cli_post.py  generate.py  geometry.py  io_qe.py  io_xyz.py  postprocess.py  qe_out_reader.py  vacancies.py
ff_trainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mattergen/: analysis.py  cli.py  generate.py  mattersim_wrapper.py
