
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mattergen"
version = "0.1.2"
description = "Generate DFT fine-tuning configurations and post-process QE outputs."
authors = [{name = "ChatGPT"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib", "ase>=3.22.1"]

[tool.setuptools]
packages = ["mattergen"]

[project.scripts]
mattergen = "mattergen.cli:main"
mattergen-post = "mattergen.cli_post:main"
