
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ff_trainer"
version = "0.1.2"
description = "Generate DFT fine-tuning configurations and post-process QE outputs."
authors = [{name = "ChatGPT"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib", "ase>=3.22.1"]

[tool.setuptools]
packages = ["ff_trainer"]

[project.scripts]
ff-trainer = "ff_trainer.cli:main"
ff-trainer-post = "ff_trainer.cli_post:main"
